--- a/views/medicos_update.pug
+++ b/views/medicos_update.pug
@@ -1,47 +1,47 @@
 doctype html
 html
     head
-        title Create
+        title Update
     body
-        h1 Crie um novo Médico
-        form(method='POST', action='/medicos')
+        h1 Atualize um Médico
+        form(method='POST', action='/medicos/' + id_medico)
             label(for='id_medico') ID Médico:
-            input#id_medico(type='number', name='id_medico', required)
+            input#id_medico(type='number', name='id_medico', value=id_medico, required)
             if !id_medico
                 p ID Médico is required.
 
             label(for='nome') Nome:
-            input#nome(type='text', name='nome', required)
+            input#nome(type='text', name='nome', value=nome, required)
             if !nome
                 p Nome is required.
 
             label(for='apelido') Apelido:
-            input#apelido(type='text', name='apelido', required)
+            input#apelido(type='text', name='apelido', value=apelido, required)
             if !apelido
                 p Apelido is required.
 
             label(for='idade') Idade:
-            input#idade(type='number', name='idade', required)
+            input#idade(type='number', name='idade', value=idade, required)
             if !idade
                 p Idade is required.
 
             label(for='sexo') Sexo:
-            input#sexo(type='text', name='sexo', required)
+            input#sexo(type='text', name='sexo', value=sexo, required)
             if !sexo
                 p Sexo is required.
 
             label(for='localidade') Localidade:
-            input#localidade(type='text', name='localidade', required)
+            input#localidade(type='text', name='localidade', value=localidade, required)
             if !localidade
                 p Localidade is required.
 
             label(for='email') Email:
-            input#email(type='email', name='email', required)
+            input#email(type='email', name='email', value=email, required)
             if !email
                 p Email is required.
 
             label(for='especialidade_id') Especialidade ID:
-            input#especialidade_id(type='number', name='especialidade_id', required)
+            input#especialidade_id(type='number', name='especialidade_id', value=especialidade_id, required)
             if !especialidade_id
                 p Especialidade ID is required.
 
