--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    a(href='/')
+      h1.big-green Clínica Médica
   body
     block content
