--- a/views/crudMedicosReadId.pug
+++ b/views/crudMedicosReadId.pug
@@ -8,7 +8,7 @@ block content
             a(href="/read")
                 h1.titulo_inicial Consultar Dados / Consultar Médicos
         body
-            h1 Detalhes dos Médicos
+            h1 Detalhes do Médico
             h2= 'Médico: ' + medico.nome
             p Médico ID: #{medico.id_medico}
             p Nome: #{medico.nome}
